# RedditHelp

./: .clang-format  .clang-tidy  ArrayReversalAndAverage.cpp  BibleCount.cpp  BitStreamWriter.cpp  CMakeLists.txt  ComputePow2.cpp  ComputePow2DomainDivide.cpp  ComputePow2DomainDivideTemplate.cpp  ComputePow2MultiThreadX86_64.cpp  ComputePow2Pipeline.cpp  InterpolationSort.cpp  README.md  ReusableIds.cpp  SampleStdDeviation.cpp  SnakeGame.cpp  compile_gcc_472.sh  initset.cpp  printtxt.cpp  rings.cpp  rings.txt  rings2.txt  rings_v2.cpp  test_spsc_ring.cpp
calculator/: .clang-tidy  CMakeLists.txt  Calculator.h  FunctionOps.h  Lexer.h  Node.h  Pointer.h  Predicates.h  TreeNodes.h  Writer.h  calculator.cpp  calculator_test.cpp
fnpointers/: CMakeLists.txt  README.md  bm_fnpointer.cpp  func.cpp  func.h
multi_index/: CMakeLists.txt  Remarks.txt  collection.cpp  collection.h  cstring.h  data.cpp  data.h  main.cpp
optional/: CMakeLists.txt  benchmark_optional.cpp  getpath.cpp
